--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blessings==1.6
 bpython==0.15
 curtsies==0.2.6
 distribute==0.6.24
+djangorestframework==3.3.2
 greenlet==0.4.9
 requests==2.9.1
 six==1.10.0
